chat overflow fix

--- a/src/styles/room.module.scss
+++ b/src/styles/room.module.scss
@@ -97,7 +97,7 @@
                 .chat{
                     
                     flex: 1 0 0;
-                    overflow: hidden;
+                    overflow: hidden auto;
                     display: flex;
                     flex-direction: column;
                     padding-bottom: 20px ;
